Fix badges on long title names on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -177,6 +177,7 @@ ul {
 
 .badge-and-title {
   display: flex;
+  align-items: center;
   gap: 0.25rem;
 }
 
